# django-rest-framework-csv

./: README.md  README.rst  pyproject.toml  setup.py  testsettings.py
example/: manage.py
example/example/: models.py  serializers.py  settings.py  urls.py  views.py
example/example/migrations/: 0001_initial.py
rest_framework_csv/: misc.py  orderedrows.py  parsers.py  renderers.py  tests.py
